--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>PixelPioneers</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./public/css/style.css">
+    <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body>
 
@@ -39,9 +39,9 @@
     <section class="carousel">
         <div class="carousel-container">
             <div class="carousel-inner">
-                <div class="carousel-item"><img src="./public/assets/images/placeholder.jpg" alt="Image 1"></div>
-                <div class="carousel-item"><img src="./public/assets/images/placeholder2.jpg" alt="Image 2"></div>
-                <div class="carousel-item"><img src="./public/assets/images/placeholder3.jpg" alt="Image 3"></div>
+                <div class="carousel-item"><img src="public/assets/images/placeholder.jpg" alt="Image 1"></div>
+                <div class="carousel-item"><img src="public/assets/images/placeholder2.jpg" alt="Image 2"></div>
+                <div class="carousel-item"><img src="public/assets/images/placeholder3.jpg" alt="Image 3"></div>
             </div>
             <button class="carousel-btn prev">&#10094;</button>
             <button class="carousel-btn next">&#10095;</button>
@@ -72,6 +72,6 @@
     </footer>
 
     <!-- Script -->
-    <script src="./public/js/script.js"></script>
+    <script src="public/js/script.js"></script>
 </body>
 </html>
