Team Dev Update

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <img src="assets/images/team/team_placeholder_real.webp" alt="Avatar Réaliste" class="avatar real">
                 </div>
                 <h4>Clément Sedillot</h4>
-                <p>Lead / Développement / Game Design</p>
+                <p>Lead / Technics / Game Development / Game Design</p>
             </div>    
             <div class="team-member card-style card-border-bottom">
                 <div class="avatar-swap">
@@ -88,7 +88,7 @@
                     <img src="assets/images/team/team_placeholder_real.webp" alt="Avatar Réaliste" class="avatar real">
                 </div>
                 <h4>Lorris Colini</h4>
-                <p>Game Design / Business & Marketing</p>
+                <p>Game Design / Marketing</p>
             </div>       
             <div class="team-member card-style card-border-bottom">
                 <div class="avatar-swap">
@@ -96,7 +96,7 @@
                     <img src="assets/images/team/team_placeholder_real.webp" alt="Avatar Réaliste" class="avatar real">
                 </div>
                 <h4>Corentin Bonifacio</h4>
-                <p>Communication Digitale & Direction Web</p>
+                <p>Digital Communication / Game Development</p>
             </div> 
             <div class="team-member card-style card-border-bottom">
                 <div class="avatar-swap">
@@ -104,7 +104,7 @@
                     <img src="assets/images/team/team_placeholder_real.webp" alt="Avatar Réaliste" class="avatar real">
                 </div>
                 <h4>Aurélien Sedillot</h4>
-                <p>Graphismes / Direction artistique</p>
+                <p>Graphics Design</p>
             </div> 
             <div class="team-member card-style card-border-bottom">
                 <div class="avatar-swap">
@@ -112,7 +112,7 @@
                     <img src="assets/images/team/team_placeholder_real.webp" alt="Avatar Réaliste" class="avatar real">
                 </div>
                 <h4>Mimi</h4>
-                <p>Graphisme / Environnements</p>
+                <p>Graphics Design</p>
             </div>
             <div class="team-member card-style card-border-bottom">
                 <div class="avatar-swap">
@@ -120,7 +120,7 @@
                     <img src="assets/images/team/team_placeholder_real.webp" alt="Avatar Réaliste" class="avatar real">
                 </div>
                 <h4>Noah Bureau</h4>
-                <p>Sound Design / Ambiances sonores</p>
+                <p>Sound Design</p>
             </div>    
         </div>
     </section>
