--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="video-background">
             <iframe 
                 id="youtube-background"
-                src="https://www.youtube.com/embed/4kt3NVzW_Ig?autoplay=1&mute=1&loop=1&playlist=4kt3NVzW_Ig&controls=0&showinfo=0&modestbranding=1&iv_load_policy=3&rel=0"
+                src="https://www.youtube.com/embed/Xv33GIFmoLc?autoplay=1&mute=1&loop=1&playlist=Xv33GIFmoLc&controls=0&showinfo=0&modestbranding=1&iv_load_policy=3&rel=0"
                 frameborder="0"
                 allow="autoplay; encrypted-media"
                 allowfullscreen
@@ -143,7 +143,7 @@
             <div id="trailer" class="about-media scroll-reveal trailer">
                 <div class="video-container">
                     <iframe 
-                        src="https://www.youtube.com/embed/4kt3NVzW_Ig?autoplay=1&mute=0&loop=1&playlist=4kt3NVzW_Ig&controls=1&modestbranding=1&iv_load_policy=3&rel=0"
+                        src="https://www.youtube.com/embed/hPyCFS_fHQo?autoplay=1&mute=0&loop=1&playlist=4kt3NVzW_Ig&controls=1&modestbranding=1&iv_load_policy=3&rel=0"
                         frameborder="0"
                         allow="autoplay; encrypted-media"
                         allowfullscreen
