Renaming of all Pixel Pioneers studio names by Pixel Bounding

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>PixelPioneers</title>
+    <title>PixelBounding</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
@@ -15,7 +15,7 @@
     <!-- Navigation -->
     <header class="header">
         <div class="logo">
-            <a href="#hero">PIXEL PIONEERS</a>  
+            <a href="#hero">PIXEL BOUNDING</a>  
         </div>
         <nav class="nav">
             <a href="#hero">Accueil</a>
@@ -51,13 +51,13 @@
     <section id="about" class="about">
         <div class="about-container">
             <div class="about-text scroll-reveal">
-                <h2>Notre Studio : PixelPioneers</h2>
-                <p>PixelPioneers est un studio indépendant, fondé et dirigé par de jeunes étudiants développeurs ambitieux, animé par la volonté de créer des récits profonds et des univers marquants.</p>
+                <h2>Notre Studio : PixelBounding</h2>
+                <p>PixelBounding est un studio indépendant, fondé et dirigé par de jeunes étudiants développeurs ambitieux, animé par la volonté de créer des récits profonds et des univers marquants.</p>
                 <p>Notre credo : façonner des mondes où narration cryptique, gameplay exigeant et direction artistique audacieuse fusionnent.</p>
                 <p>Chaque jeu que nous créons est pensé comme une porte ouverte vers un autre monde, empreint de mystère et de sens.</p>
             </div>
             <div class="about-media scroll-reveal">
-                <img src="assets/images/pixel-pionneers_logo.webp" alt="Équipe PixelPioneers">
+                <img src="assets/images/pixel-pionneers_logo.webp" alt="Équipe PixelBounding">
             </div>
         </div>
     </section>    
@@ -303,7 +303,7 @@
                 <ul class="contact-list">
                     <li>
                         <img src="assets/icons/email.webp" alt="Email" class="contact-icon">
-                        <a href="mailto:pixelpioneersstud@gmail.com">pixelpioneersstud@gmail.com</a>
+                        <a href="mailto:contactpixelbounding@gmail.com">contactpixelbounding@gmail.com</a>
                     </li>
                     <li>
                         <img src="assets/icons/discord.webp" alt="Discord" class="contact-icon">
@@ -318,13 +318,13 @@
             <div class="footer-block">
                 <h3>Suivez-nous</h3>
                 <div class="footer-socials">
-                    <a href="https://www.youtube.com/@PixelPioneersStud" target="_blank">
+                    <a href="https://www.youtube.com/@PixelBouding" target="_blank">
                         <img src="assets/icons/youtube.webp" alt="YouTube">
                     </a>
-                    <a href="https://x.com/PPioneersStudio" target="_blank">
+                    <a href="https://x.com/PixelBounding" target="_blank">
                         <img src="assets/icons/x.webp" alt="X (Twitter)">
                     </a>
-                    <a href="https://www.instagram.com/pixel_pioneers_stud/" target="_blank">
+                    <a href="https://www.instagram.com/pixel_bounding/" target="_blank">
                         <img src="assets/icons/instagram.webp" alt="Instagram">
                     </a>
                 </div>                
@@ -342,7 +342,7 @@
         </div>
     
         <div class="footer-bottom">
-            <p>&copy; 2025 PixelPioneers — Le destin s'écrit pixel par pixel.</p>
+            <p>&copy; 2025 PixelBounding — Le destin s'écrit pixel par pixel.</p>
         </div>
     </footer>        
 
