Complete redesign of the UI colors to match the new Pixel Bounding identity

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <p>Chaque jeu que nous créons est pensé comme une porte ouverte vers un autre monde, empreint de mystère et de sens.</p>
             </div>
             <div class="about-media scroll-reveal">
-                <img src="assets/images/pixel-pionneers_logo.webp" alt="Équipe PixelBounding">
+                <img src="assets/images/pixel-bounding_logo.png" alt="Équipe PixelBounding">
             </div>
         </div>
     </section>    
